rewrote HTML page to explicitly state assignment details. added missingAssignment page for when assignmentId is not found

--- a/teacher/src/main/resources/templates/missingAssignment.html
+++ b/teacher/src/main/resources/templates/missingAssignment.html
@@ -6,10 +6,6 @@
 </head>
 <body>
     <h1>Assignment Details</h1>
-
-    <p th:text="|ID: ${id}|" />
-    <p th:text="|Name: ${name}|" />
-    <p th:text="|Due Date: ${dueDate}|" />
-    <p th:text="|Requirements: ${requirements}|" />
+    <p>Assignment not found!</p>
 </body>
 </html>
