More Final Edits
Editing the Add Page to work

--- a/StudentPortal-main/src/main/resources/templates/add.html
+++ b/StudentPortal-main/src/main/resources/templates/add.html
@@ -8,20 +8,16 @@
             </div><br>
 
             <div style="text-align: center; border: 2px solid #000000; background-color: #ffffff; padding-top: 3%; padding-bottom: 5%;"> 
-                <form action="#" th:action="@{/save}" th:object="${name}" method="POST" style="font-size: 200%">
-                    <label for="assignmentName"> Assignment Name:</label><br>
+                <form action="#" th:action="@{/save}" th:object="${assignment}" method="POST" style="font-size: 200%">
+                    <label for="assignmentName"><b>Assignment Name:</b></label><br>
                     <input type="text" id="assignmentName" name="assignmentName" value="" style="width: 500px">
-                </form>
-            </div><br><br>
-
-            <div style="text-align: center; border: 2px solid #000000; background-color: #ffffff; padding-top: 3%; padding-bottom: 5%;"> 
-                <form action="#" th:action="@{/save}" th:object="${grade}" method="POST" style="font-size: 200%"> 
-                    <label for="assignmentGrade"> Grade:</label><br>
+                    <br><br>
+                    <label for="assignmentGrade"><b>Grade:</b></label><br>
                     <input type="text" id="assignmentGrade" name="assignmentGrade" value="" style="width: 500px">
-                </form>
-            </div><br><br>
-            <button type="submit" value="Add Assignment" style="padding: 30px; font-size: larger; background-color: #FFF7CC;" 
-            method="POST"><b>Add Assignment</b></button>
+                    <br><br>
+                    <button type="submit"  style="padding: 15px; font-size: larger; background-color: #FFF7CC;">Add</button>
+             </form>
+
         </body>
     </head>
 </html>
