--- a/StudentPortal-main/src/main/resources/templates/details.html
+++ b/StudentPortal-main/src/main/resources/templates/details.html
@@ -13,5 +13,7 @@
             </form>
         </div><br><br>
 
-        <button type="submit" value="Display Due Date" style="padding: 30px; font-size: larger; background-color: #FFF7CC;"><b>Display Due Date</b></button>
+        <form action="#" th:action="@{/detailsrequest}" method="POST">
+            <button type="submit"  style="padding: 30px; font-size: larger; background-color: #FFF7CC;">Display Due Date</button>
+         </form>
 </html>
