--- a/StudentPortal-main/src/main/resources/templates/duedate.html
+++ b/StudentPortal-main/src/main/resources/templates/duedate.html
@@ -8,7 +8,7 @@
 
         <div style="text-align: center; border: 2px solid #000000; background-color: #ffffff; padding-top: 3%; padding-bottom: 5%;"> 
             <h2>Homework 1</h2>
-            <h2>Due Date: Submit within a week!</h2>
+            <h2>Due Date: Submit within Two Weeks aka May 7th, 2024! </h2>
         </div><br><br>
 
     </div>
