--- a/StudentPortal-main/src/main/resources/templates/index.html
+++ b/StudentPortal-main/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
      <a href="http://localhost:8080/assignmentdetails?">Get Assignment Details</a>
     </div>
      <h1> </h1>
-     <form action="#" th:action="@{/gradeCalculator}" method="POST">
+     <form action="#" th:action="@{http://localhost:8082/gradeCalculator}" method="POST">
       <button type="submit"  style="padding: 30px; font-size: larger; background-color: #FFF7CC;">Calculate Grade!</button>
    </form>
    </body>
